Wed Dec 06 20:35:48 2000  George Lebl <jirka@5z.com>

	* gnome-mdi.[ch], gnome-mdi-child.[ch], gnome-mdiP.h,
	  gnome-mdi-generic-child.[ch]:  fix yesterday's braindamages and
	  make signals actually work on the MDI, us ehte boilerplate on these
	  and some cleanup.  The virtual pointers in the child are now not
	  defined by the generic child typedef, since the pointers in the
	  class structure should NOT include the data pointers.  Plus it is
	  a style issue that they should be explicit types rather then
	  typedefs.

2000-12-06  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h (GnomeSelector): Added "add_uri" and
	"add_uri_default" signals.
	(gnome_selector_add_uri): New function.

	* gnome-vfs-util.c (file_read_callback): If result == GNOME_VFS_OK,
	but bytes_read == 0, we're at the end of the file.

2000-12-06  Martin Baulig  <baulig@suse.de>

	* gnome-selector.c: Asyncify the "set_filename" signal and the
	gnome_selector_set_filename() function.

	* gnome-entry.c (set_entry_text_handler): `gentry->_priv->entry'
	may be NULL if we don't have the default entry widget.

2000-12-06  Martin Baulig  <baulig@suse.de>

	* gnome-canvas.c (gnome_canvas_get_color): The 7th argument of
	gdk_color_context_get_pixels() is now a gulong.
	(gnome_canvas_get_color_pixel): Likewise.

	* wap-textfu.h: #include <libxml/parser.h> instead of
	<gnome-xml/parser.h>

Wed Dec 06 04:49:27 2000  George Lebl <jirka@5z.com>

	* gnome-mdi.c: correctly get default return values for emitting
	  signals by using g_signal_emitv directly.  Also fix a precondition
	  on remove_view.

Wed Dec 06 02:57:06 2000  George Lebl <jirka@5z.com>

	* gnome-animator.c: check for nulls.  If no current frame draw black.

Wed Dec 06 01:55:24 2000  George Lebl <jirka@5z.com>

	* gnome-animamtor.c, gnome-canvas.c, gnome-dock-band.c, 
	  gnome-dock-item.c, gnome-dock.c, gnome-druid-page.c,
	  gnome-druid.c, gnome-roo.c, gnome-textfu.c, gtkpixmapmenuitem.c,